# libergpt-telegram

./: .env.example  .gitignore  DEVELOPMENT_SUMMARY.md  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  setup.sh  test_bot.py  test_memory.py
.github/instructions/: api.instructions.md
.github/setup/: library.instructions.md
src/: __init__.py  api_client.py  bot.py  config.py  handlers.py  memory.py  utils.py
